--- a/index.html
+++ b/index.html
@@ -33,17 +33,30 @@
   </head>
 
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top navbar-inverse opaque-navbar">
+    <!-- Header -->
+    <header id="header">
+      <div class="intro">
+        <div class="container-fluid">
+          <div class="intro-text">
+            <h2 class="text-left" id="name">Hello,</h2>
+            <h2 class="name">I'm Esther Muchai</h2>
+            <h3 class="web">Web Developer/Designer</h3>
+          </div>
+        </div> <br>
+        <a class="page-scroll" href="#about" aria-hidden="true"><i class="fa fa-chevron-down"></i></a>
+      </div>
+    </header>
+
     <!-- Navigation -->
     <div id="nav">
       <nav class="navbar navbar-custom">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> <i class="fa fa-bars"></i> </button>
-            <!-- <a class="navbar-brand page-scroll" href="#page-top" style="color:white;font-size:24px;">HOME</a>  -->
-          </div>
+            <a class="navbar-brand page-scroll" href="#page-top">Home</a> </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse navbar-right navbar-main-collapse" id="text-left">
+          <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
             <ul class="nav navbar-nav">
               <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
               <li class="hidden"> <a href="#page-top"></a> </li>
@@ -56,18 +69,6 @@
         </div>
       </nav>
     </div>
-
-    <!-- Header -->
-    <header id="header">
-      <div class="intro">
-        <div class="container-fluid">
-          <div class="intro-text">
-            <h2 class="text-left">Hello,</h2>
-            <h2 class="name">I'm Esther Muchai</h2>
-            <h3 class="web">Web Developer/Designer</h3>
-          </div>
-        </div>
-    </header>
 
     <!-- About Section -->
     <div id="about">
@@ -92,7 +93,7 @@
 
     <!-- Skills Section -->
     <div id="skills">
-      <div class="container-fluid">
+      <div class="container">
         <div class="section-title center">
           <h2 class="text-center" id="name">Skills</h2>
           <hr>
@@ -130,106 +131,108 @@
 
     <!-- Portfolio Section -->
     <div id="portfolio">
-      <div class="container">
+      <div class="container text-center">
         <div class="section-title text-center center">
           <h2 id="name">Projects</h2>
           <hr>
         </div>
-        <!-- Project 2 -->
-        <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal1">
-          <div class="portfolio-item">
-            <div class="hover-bg">
-              <i class="fa fa-camera fa-2x" style="font-size: 180px;" aria-hidden="true"></i>
-              <h4>Unsplash-Clone</h4>
+        <div class="modal-container">
+          <!-- Project 1 -->
+          <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal1">
+            <div class="portfolio-item">
+              <div class="hover-bg">
+                <i class="fa fa-camera fa-2x" style="font-size: 180px;" aria-hidden="true"></i>
+                <h4>Unsplash-Clone</h4>
+              </div>
             </div>
-          </div>
-        </a>
+          </a>
 
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal1" tabindex="-4" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header"> <br>
-                <h5 class="modal-title" id="exampleModalLabel">Unsplash-Clone</h5>
-              </div> <br>
-              <div class="modal-body">
-                <img src="img/projects/unsplash.png" title="Technologies used: Flask, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
-                <H4>This is a cloned web application for unsplash where users can upload and download photos from other users.</H4>
-                <H4>Technologies used: Flask, Heroku, HTML, CSS</H4>
-                <H4><a href="https://github.com/mwerumuchai/unsplash-clone" target="_blank"><i class="fa fa-github"></i> <span class="site">
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal1" tabindex="-4" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header"> <br>
+                  <h5 class="modal-title" id="exampleModalLabel">Unsplash-Clone</h5>
+                </div> <br>
+                <div class="modal-body">
+                  <img src="img/projects/unsplash.png" title="Technologies used: Flask, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
+                  <H4>This is a cloned web application for unsplash where users can upload and download photos from other users.</H4>
+                  <H4>Technologies used: Flask, Heroku, HTML, CSS</H4>
+                  <H4><a href="https://github.com/mwerumuchai/unsplash-clone" target="_blank"><i class="fa fa-github"></i> <span class="site">
                 <a href="https://unsplash-clone2.herokuapp.com/" target="_blank">View Site</a></H4>
-                </span>
-              </div>
-              <div class=" modal-footer ">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  </span>
+                </div>
+                <div class=" modal-footer ">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <!-- Button trigger modal -->
-        <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">
-          <div class="portfolio-item">
-            <div class="hover-bg">
-              <i class="fa fa-truck" style="font-size: 190px;" aria-hidden="true"></i>
-              <h4>Traffic Tracker</h4>
+          <!-- Button trigger modal -->
+          <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">
+            <div class="portfolio-item">
+              <div class="hover-bg">
+                <i class="fa fa-truck" style="font-size: 190px;" aria-hidden="true"></i>
+                <h4>Traffic Tracker</h4>
+              </div>
             </div>
-          </div>
-        </a>
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header"> <br>
-                <h5 class="modal-title" id="exampleModalLabel">Traffic Tracker</h5>
-              </div> <br>
-              <div class="modal-body">
-                <img src="img/portfolio/tt-desc2.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
-                <H4>This is a simple Web application that allows users to track traffic on specified routes.</H4>
-                <H4>Technologies used: Ember, Firebase, GoogleMap, Twitter API</H4>
-                <H4><a href="https://github.com/mwerumuchai/traffic-tracker" target="_blank"><i class="fa fa-github"></i> <span class="site">
+          </a>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header"> <br>
+                  <h5 class="modal-title" id="exampleModalLabel">Traffic Tracker</h5>
+                </div> <br>
+                <div class="modal-body">
+                  <img src="img/portfolio/tt-desc2.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
+                  <H4>This is a simple Web application that allows users to track traffic on specified routes.</H4>
+                  <H4>Technologies used: Ember, Firebase, GoogleMap, Twitter API</H4>
+                  <H4><a href="https://github.com/mwerumuchai/traffic-tracker" target="_blank"><i class="fa fa-github"></i> <span class="site">
                 <a href="https://traffic-tracker-70c62.firebaseapp.com/" target="_blank">View Site</a></H4>
-                </span>
-              </div>
-              <div class=" modal-footer ">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  </span>
+                </div>
+                <div class=" modal-footer ">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <!-- Project 3 -->
-        <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal2">
-          <div class="portfolio-item">
-            <div class="hover-bg">
-              <i class="fa fa-car" style="font-size: 180px;" aria-hidden="true"></i>
-              <h4>Autos</h4>
+          <!-- Project 3 -->
+          <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal2">
+            <div class="portfolio-item">
+              <div class="hover-bg">
+                <i class="fa fa-car" style="font-size: 180px;" aria-hidden="true"></i>
+                <h4>Autos</h4>
+              </div>
             </div>
-          </div>
-        </a>
+          </a>
 
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal2" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header"> <br>
-                <h5 class="modal-title" id="exampleModalLabel">Autos</h5>
-              </div> <br>
-              <div class="modal-body">
-                <img src="img/projects/autos.png" title="Technologies used: Django, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
-                <H4>This application helps users to view more details about cars and be able to rate them.</H4>
-                <H4>Technologies used: Django, Heroku, HTML, CSS</H4>
-                <H4><a href="https://github.com/mwerumuchai/autos" target="_blank"><i class="fa fa-github"></i> <span class="site">
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal2" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header"> <br>
+                  <h5 class="modal-title" id="exampleModalLabel">Autos</h5>
+                </div> <br>
+                <div class="modal-body">
+                  <img src="img/projects/autos.png" title="Technologies used: Django, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
+                  <H4>This application helps users to view more details about cars and be able to rate them.</H4>
+                  <H4>Technologies used: Django, Heroku, HTML, CSS</H4>
+                  <H4><a href="https://github.com/mwerumuchai/autos" target="_blank"><i class="fa fa-github"></i> <span class="site">
                 <a href="https://mweru-autos.herokuapp.com/" target="_blank">View Site</a></H4>
-                </span>
-              </div>
-              <div class=" modal-footer">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  </span>
+                </div>
+                <div class=" modal-footer">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
+                </div>
               </div>
             </div>
           </div>
@@ -243,8 +246,7 @@
       <div class="container-fluid ">
         <div class="row">
           <h2 id="name">Contact</h2>
-          <i class="fa fa-map-marker fa-2x "></i>
-          <h3 id="mail"><i class="fa fa-envelope-o fa-2x "></i><a href="mailto:mwerumuchai@gmail.com" target="_top">mwerumuchai@gmail.com</a></h3>
+          <h3 id="mail"><a href="mailto:mwerumuchai@gmail.com" target="_top">mwerumuchai@gmail.com</a></h3>
           <div class="social ">
             <ul>
               <li><a href="https://github.com/mwerumuchai " target="_blank"><i class="fa fa-github"></i></a></li>
